dodanie logowania dodanie pomiaru 4 wire resistance

--- a/output/results.ini
+++ b/output/results.ini
@@ -1,8 +1,9 @@
 [output]
-measurement_type = 2 wire resistance
-measurement_value = 1785.32973
-limits_set = True
-lower_limit = 1000.0
-upper_limit = 3000.0
-judgment = Pass
+measurement_type = 4 wire resistance
+measurement_value = +9.90000000E+37
+	
+limits_set = False
+lower_limit = 0
+upper_limit = 0
+judgment = n/a
 
